--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,20 @@ services:
       - FLASK_APP=app.py
       - FLASK_DEBUG=1
 
+  mongodb:
+    container_name: mongodb
+    network_mode: host
+    environment:
+      - AUTH=yes
+      - MONGO_INITDB_DATABASE=database
+      - MONGO_INITDB_ROOT_USENAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=personalguide2020
+    volumes:
+      - ./mongodb/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - ./mongo-volume:/data/db
+    ports:
+      - '27017-27019:27017-27019'
+
 #version: "3"
 #services:
 #  frontend:
@@ -46,4 +60,4 @@ services:
 #    environment:
 #      - FLASK_ENV=development
 #      - FLASK_APP=app.py
-      - FLASK_DEBUG=1
+#      - FLASK_DEBUG=1
