--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,12 +25,13 @@ services:
   mongodb:
     container_name: mongodb
     image: mongo:latest
+    network_mode: host
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=personalguide2020
-      - MONGO_INITDB_DATABASE=database
     volumes:
       - ./mongodb/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js
       - ./mongo-volume:/data/db
     ports:
       - '27017-27019:27017-27019'
+    command: mongod
