--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,8 +31,8 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=personalguide2020
     volumes:
-      - ./mongodb/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js
+      - ./mongodb/:/docker-entrypoint-initdb.d/
       - ./mongo-volume:/data/db
     ports:
-      - '27017-27019:27017-27019'
+      - 27017:27017
     command: mongod
