--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,42 @@
+attrs==20.3.0
+beautifulsoup4==4.9.3
+certifi==2020.11.8
+click==7.1.2
+cycler==0.10.0
+decorator==4.4.2
 Flask==1.1.2
-Flask-Cors==3.0.8
+Flask-Cors==3.0.9
+geojson==2.5.0
+importlib-metadata==2.0.0
+iniconfig==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+kiwisolver==1.3.1
+lxml==4.6.1
+MarkupSafe==1.1.1
+matplotlib==3.3.2
+mplleaflet==0.0.5
+networkx==2.5
+numpy==1.19.4
+ortools==8.0.8283
+OSMPythonTools==0.2.9
+overpy==0.4
+packaging==20.4
+pandas==1.1.4
+Pillow==8.0.1
+pluggy==0.13.1
+protobuf==3.13.0
+py==1.9.0
+pyparsing==2.4.7
+pytest==6.1.2
+pytest-sugar==0.9.4
+python-dateutil==2.8.1
+pytz==2020.4
+six==1.15.0
+soupsieve==2.0.1
+termcolor==1.1.0
+toml==0.10.2
+ujson==4.0.1
+Werkzeug==1.0.1
+xarray==0.16.1
+zipp==3.4.0
