Draw route on map

--- a/frontend/nginx.dev.conf
+++ b/frontend/nginx.dev.conf
@@ -14,8 +14,11 @@ http {
     access_log /var/log/nginx/data-access.log combined;
 
     location / {
-      root /usr/share/nginx/html;
-      }
+      root   /usr/share/nginx/html;
+      index  index.html index.htm;
+      try_files $uri /index.html;
+      include /etc/nginx/mime.types;
+    }
 
     location /api {
        proxy_pass http://backend:5000/api;
