--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "leaflet": "^1.7.0",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-helmet": "^6.1.0",
     "react-leaflet": "^2.8.0",
-    "react-scripts": "^4.0.0"
+    "react-scripts": "^4.0.0",
+    "react-leaflet-arrowheads": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
