--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ importlib-metadata==2.0.0
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+joblib==0.17.0
 kiwisolver==1.3.1
 lxml==4.6.1
 MarkupSafe==1.1.1
@@ -27,14 +28,19 @@ Pillow==8.0.1
 pluggy==0.13.1
 protobuf==3.13.0
 py==1.9.0
+pymongo==3.11.1
 pyparsing==2.4.7
 pytest==6.1.2
 pytest-sugar==0.9.4
 python-dateutil==2.8.1
 pytz==2020.4
+scikit-learn==0.23.2
+scipy==1.5.4
 six==1.15.0
+sklearn==0.0
 soupsieve==2.0.1
 termcolor==1.1.0
+threadpoolctl==2.1.0
 toml==0.10.2
 ujson==4.0.1
 Werkzeug==1.0.1
