--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,5 +6,4 @@ WORKDIR /usr/src/app
 COPY requirements.txt /usr/src/app
 RUN pip install -r requirements.txt
 
-ENTRYPOINT [ "flask" ]
-CMD ["run", "--host=0.0.0.0", "--port=5000"]
+CMD ["gunicorn", "-b", "0.0.0.0:5000", "app:app"]
