--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,12 +7,14 @@ decorator==4.4.2
 Flask==1.1.2
 Flask-Cors==3.0.9
 geojson==2.5.0
+gunicorn==20.0.4
 importlib-metadata==2.0.0
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.17.0
 kiwisolver==1.3.1
+llvmlite==0.34.0
 lxml==4.6.1
 MarkupSafe==1.1.1
 matplotlib==3.3.2
