--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,51 +2,53 @@ events { }
 
 http {
 
-  map $http_upgrade $connection_upgrade {
-      default upgrade;
-      ''      close;
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
     }
 
-  server {
-    server_name website.com;
-    return 301 $scheme://website.com$request_uri;
-  }
-
-  server {
-    listen 80;
-    server_name website.com;
-    return 301 https://demo.ahmedbesbes.com$request_uri;
-         }
-
-   server {
-    listen 443 ssl;
-    server_name website.com;
-    
-    ssl_certificate /etc/nginx/certs/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/privkey.pem;
-    
-    access_log /var/log/nginx/data-access.log combined;
-
-    location / {
-      root   /usr/share/nginx/html;
-      index  index.html index.htm;
-      try_files $uri /index.html;
-      include /etc/nginx/mime.types;
+    server {
+        listen 80;
+        server_name walkcreator.ru;
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+        location / {
+            return 301 https://$host$request_uri;
+        }
     }
 
-    location /api {
-       proxy_pass http://backend:5000/api;
-       proxy_set_header X-Real-IP  $remote_addr;
-       proxy_set_header X-Forwarded-For $remote_addr;
-       proxy_set_header Host $host;
-       proxy_set_header X-Forwarded-Proto $scheme;
-       proxy_redirect http://backend:5000/api $scheme://$http_host/;
-       proxy_http_version 1.1;
-       proxy_set_header Upgrade $http_upgrade;
-       proxy_set_header Connection $connection_upgrade;
-       proxy_read_timeout 20d;
-       proxy_buffering off;
-       }
+    server {
+        listen 443 ssl;
+        server_name walkcreator.ru;
 
+        ssl_certificate /etc/letsencrypt/live/walkcreator.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/walkcreator.ru/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+        access_log /var/log/nginx/data-access.log combined;
+
+        location / {
+          root   /usr/share/nginx/html;
+          index  index.html index.htm;
+          try_files $uri /index.html;
+          include /etc/nginx/mime.types;
+        }
+
+        location /api {
+           proxy_pass http://backend:5000/api;
+           proxy_set_header X-Real-IP  $remote_addr;
+           proxy_set_header X-Forwarded-For $remote_addr;
+           proxy_set_header Host $host;
+           proxy_set_header X-Forwarded-Proto $scheme;
+           proxy_redirect http://backend:5000/api $scheme://$http_host/;
+           proxy_http_version 1.1;
+           proxy_set_header Upgrade $http_upgrade;
+           proxy_set_header Connection $connection_upgrade;
+           proxy_read_timeout 20d;
+           proxy_buffering off;
+        }
    }
 }
