--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -6,4 +6,5 @@ WORKDIR /usr/src/app
 COPY requirements.txt /usr/src/app
 RUN pip install -r requirements.txt
 
-CMD ["gunicorn", "-b", "0.0.0.0:5000", "app:app"]
+ENTRYPOINT [ "flask" ]
+CMD ["run", "--host=0.0.0.0", "--port=5000"]
