--- a/nginx.deploy.conf
+++ b/nginx.deploy.conf
@@ -1,3 +1,6 @@
+upstream newserver {
+  server localhost:9090;  # this is our server
+}
 
 server {
     server_name www.walkcreator.ru;
@@ -6,24 +9,24 @@ server {
 
 server {
     server_name walkcreator.ru;
-    location / {
-        proxy_pass http://localhost:9090;
-    }
-
     listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/walkcreator.ru/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/walkcreator.ru/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+    location / {
+        proxy_set_header Host $host;
+        proxy_pass http://newserver;
+    }
 }
 
 server {
+    server_name walkcreator.ru;
+    listen 80;
     if ($host = walkcreator.ru) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
-
-    server_name walkcreator.ru;
-    listen 80;
     return 404; # managed by Certbot
 }
