--- a/frontend/nginx.dev.conf
+++ b/frontend/nginx.dev.conf
@@ -1,4 +1,7 @@
-server {
+events { }
+
+http {
+   server {
     listen 80;
 
     access_log /var/log/nginx/data-access.log combined;
@@ -22,5 +25,7 @@ server {
        proxy_set_header Connection $connection_upgrade;
        proxy_read_timeout 20d;
        proxy_buffering off;
-    }
+       }
+
+   }
 }
