--- a/nginx.deploy.conf
+++ b/nginx.deploy.conf
@@ -1,33 +1,34 @@
-events { }
 
-http {
-    server {
-        server_name www.walkcreator.ru;
-        return 301 $scheme://walkcreator.ru$request_uri;
+server {
+    server_name www.walkcreator.ru;
+    return 301 $scheme://walkcreator.ru$request_uri;
+}
+
+server {
+    server_name walkcreator.ru;
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/walkcreator.ru/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/walkcreator.ru/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+    location / {
+        proxy_pass http://localhost:9090/;
     }
 
-    server {
-        server_name walkcreator.ru;
-        listen 443 ssl; # managed by Certbot
-        ssl_certificate /etc/letsencrypt/live/walkcreator.ru/fullchain.pem; # managed by Certbot
-        ssl_certificate_key /etc/letsencrypt/live/walkcreator.ru/privkey.pem; # managed by Certbot
-        include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
-        location / {
-            proxy_pass http://localhost:9090;
-        }
-
-
+    location /api {
+        proxy_pass http://localhost:5000/api;
+        proxy_read_timeout 20d;
+        proxy_buffering off;
     }
+}
 
-    server {
-        server_name walkcreator.ru;
-        listen 80;
-        if ($host = walkcreator.ru) {
-            return 301 https://$host$request_uri;
-        } # managed by Certbot
+server {
+    server_name walkcreator.ru;
+    listen 80;
+    if ($host = walkcreator.ru) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
 
-        return 404; # managed by Certbot
-    }
+    return 404; # managed by Certbot
 }
